# pangolin

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile.embedding  Dockerfile.pangolin  Dockerfile.pangolin-models  Makefile  README.md  go.mod  go.sum  pyproject.toml  settings.toml
api/: README.md  go.mod
api/cmd/: main.go
api/internal/config/: settings.go
api/internal/configs/: settings.go  settings_test.go
api/internal/embedding/: client.go
api/internal/engines/databases/: database.go  pagination.go
api/internal/logging/: logging.go
api/internal/models/: databases.go  interfaces.go  pagination.go  validation.go
api/internal/proto/: transformers.pb.go  transformers_grpc.pb.go
api/internal/routes/: health_test.go
api/internal/routes/health/: health_test.go
api/internal/routes/v1/: collections.go  databases.go  databases_test.go  documents.go  route.go
control/cmd/: main.go
control/internal/configs/: settings.go  settings_test.go
control/internal/embedding/: client.go
control/internal/models/: validation.go
control/internal/proto/: embedding_grpc.pb.go
control/internal/routes/health/: health.go
embedding/: Dockerfile  pyproject.toml
embedding/src/: main.py
embedding/src/config/: config.py
embedding/src/interceptors/: logging.py
embedding/src/models/: transformers.py
embedding/src/proto/: embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py  transformers_pb2.py  transformers_pb2_grpc.py
embedding/src/service/: server.py  transformers.py
embedding/tests/: conftest.py
embedding/tests/unit/: test_models_transformers.py  test_server_transformers.py
index/src/: config.rs  main.rs
index/src/config/: config.rs  settings.rs
internal/pangolin/: vector.go
models/: README.md
models/src/: main.py
models/src/config/: settings.py
models/src/exceptions/: embedding.py  server.py
models/src/interceptors/: logging.py
models/src/models/: base.py  transformers.py
models/src/proto/: embedding_pb2.py  embedding_pb2_grpc.py
models/src/service/: models.py  server.py
models/tests/: conftest.py
models/tests/unit/: test_models_transformers.py  test_server_health.py  test_server_transformers.py
nodes/src/: index.rs
nodes/src/config/: loader.rs  settings.rs
nodes/src/distance/: cosine.rs  error.rs  euclidean.rs  mod.rs
nodes/src/hnsw/: build.rs  graph.rs  mod.rs  test_integration.rs
pangolin/cmd/: control.go  main.go
pangolin/internal/configs/: settings.go  settings_test.go
pangolin/internal/distance/: cosine.go  cosine_test.go  euclidean.go  euclidean_test.go
pangolin/internal/embedding/: client.go
pangolin/internal/engines/databases/: database.go  pagination.go
pangolin/internal/models/: databases.go  interfaces.go  pagination.go  vector.go
pangolin/internal/proto/: embedding.pb.go  embedding_grpc.pb.go
pangolin/internal/routes/health/: health_test.go
pangolin/internal/routes/v1/: collections.go  databases.go  databases_test.go  documents.go  route.go
pangolin/testing/: testing.go
proto/: embedding.proto  sbert.proto  transformers.proto
protos/: embedding.proto
src/: main.py
src/errors/: embedding.py
src/interceptors/: logging.py
src/logger/: __init__.py  logger.py
src/models/: base.py  sbert.py  transformers.py
src/proto/: transformers_pb2.py  transformers_pb2_grpc.py
src/service/: server.py  transformers.py
